--- a/src/assets/styles/_Common.scss
+++ b/src/assets/styles/_Common.scss
@@ -316,7 +316,7 @@
 	position: relative;
 	overflow: hidden;
 
-	background: var(--background--alpha);
+	background: var(--background--alpha) !important;
 
 	&::after {
 		content: '';
