--- a/src/views/Portfolio/PortfolioItem.module.scss
+++ b/src/views/Portfolio/PortfolioItem.module.scss
@@ -7,13 +7,11 @@
 	border-radius: $ui-rounded--xl;
 
 	.preview {
+		@include ui-size-control($maxH: 240px);
+
 		position: relative;
 		color: var(--text-secondary);
 		border-radius: inherit;
-		background: var(--background-alpha);
-
-		outline: 1px solid var(--separator);
-		outline-offset: -1px;
 
 		aspect-ratio: 133 / 64;
 
@@ -32,8 +30,6 @@
 				@include ui-size-control(100%, 100%);
 				@include ui-flex-container(flex, center, center);
 
-				// background-color: var(--background-alpha);
-				// backdrop-filter: blur(20px);
 				border-radius: inherit;
 
 				svg {
@@ -51,11 +47,16 @@
 		}
 
 		.image {
-			@include ui-flex-container(flex, center, center);
 			@include ui-size-control(100%, 100%);
+			@include ui-flex-container(flex, center, center);
 
 			overflow: hidden;
 			border-radius: inherit;
+
+			outline: 1px solid var(--separator--alpha);
+			outline-offset: -1px;
+
+			// background-color: var(--background--alpha);
 
 			img {
 				transition: 0.24s ease-in;
@@ -71,12 +72,6 @@
 		gap: $ui-step * 2;
 		padding-top: clamp($ui-step * 3, 1.64vmax, $ui-step * 5);
 		padding-bottom: clamp($ui-step * 3, 1.64vmax, $ui-step * 5);
-
-		.project-name {
-			@include ui-text-ellipsis(2);
-
-			transition: 0.24s ease-in;
-		}
 
 		.caption {
 			@include ui-display-grid(auto 1fr);
