--- a/src/assets/styles/_Colors.scss
+++ b/src/assets/styles/_Colors.scss
@@ -1,15 +1,31 @@
-// Social ———————————————————————————————————————————————— //
+:root {
+	--accent-brand-color: var(--accent-blue-color);
+	--accent-brand-color--hover: hsl(241 100% 68%);
+	--accent-positive-color: var(--lime-color);
+	--accent-positive-color--hover: hsl(132 70% 58%);
+	--accent-negative-color: var(--deep-coral-color);
+	--accent-negative-color--hover: hsl(0 100% 68%);
 
-$Vk: hsl(212 100% 50%);
-$VkWorkspace: hsl(185 100% 46%);
-$VkMail: hsl(170 100% 46%);
-$Telegram: hsl(201 85% 55%);
-$GitHub: hsl(260 56% 52%);
-$GitLab: hsl(20 97% 57%);
-$Yandex: hsl(9 97% 55%);
-$HeadHunter: hsl(353 99% 44%);
+	--deep-coral-color: hsl(0 100% 62%);
+	--neon-carrot-color: hsl(28 100% 62%);
+	--gold-color: hsl(48 100% 62%);
+	--pistachio-color: hsl(86 70% 58%);
+	--lime-color: hsl(132 70% 52%);
+	--cyan-color: hsl(185 100% 50%);
+	--accent-blue-color: hsl(241 100% 62%);
+	--lilac-color: hsl(270 100% 62%);
+	--fuchsia-color: hsl(300 100% 62%);
+	--magenta-color: hsl(337 100% 62%);
 
-// Palette ———————————————————————————————————————————————— //
+	--vk-color: hsl(212 100% 50%);
+	--vk-workspace-color: hsl(185 100% 46%);
+	--vk-mail-color: hsl(170 100% 46%);
+	--telegram-color: hsl(201 85% 55%);
+	--github-color: hsl(260 56% 52%);
+	--gitlab-color: hsl(20 97% 57%);
+	--yandex-color: hsl(9 97% 55%);
+	--head-hunter-color: hsl(353 99% 44%);
+}
 
 $DeepCoral: hsl(0 100% 62%);
 $NeonCarrot: hsl(28 100% 62%);
@@ -21,6 +37,15 @@ $AccentBlue: hsl(241 100% 62%);
 $Lilac: hsl(270 100% 62%);
 $Fuchsia: hsl(300 100% 62%);
 $Magenta: hsl(337 100% 62%);
+
+$Vk: hsl(212 100% 50%);
+$VkWorkspace: hsl(185 100% 46%);
+$VkMail: hsl(170 100% 46%);
+$Telegram: hsl(201 85% 55%);
+$GitHub: hsl(260 56% 52%);
+$GitLab: hsl(20 97% 57%);
+$Yandex: hsl(9 97% 55%);
+$HeadHunter: hsl(353 99% 44%);
 
 // Alpha ———————————————————————————————————————————————— //
 
