--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -1,85 +1,21 @@
-@import 'Common', 'Reset', 'Fonts';
+@import 'Common', 'Fonts', 'Reset', 'Theme';
 
 :root {
-	--accent-brand-color: var(--accent-blue-color);
-	--accent-brand-color--hover: hsl(241 100% 68%);
-	--accent-positive-color: var(--lime-color);
-	--accent-positive-color--hover: hsl(132 70% 58%);
-	--accent-negative-color: var(--deep-coral-color);
-	--accent-negative-color--hover: hsl(0 100% 68%);
-
-	--deep-coral-color: hsl(0 100% 62%);
-	--neon-carrot-color: hsl(28 100% 62%);
-	--gold-color: hsl(48 100% 62%);
-	--pistachio-color: hsl(86 70% 58%);
-	--lime-color: hsl(132 70% 52%);
-	--cyan-color: hsl(185 100% 50%);
-	--accent-blue-color: hsl(241 100% 62%);
-	--lilac-color: hsl(270 100% 62%);
-	--fuchsia-color: hsl(300 100% 62%);
-	--magenta-color: hsl(337 100% 62%);
-
-	--vk-color: hsl(212 100% 50%);
-	--vk-workspace-color: hsl(185 100% 46%);
-	--vk-mail-color: hsl(170 100% 46%);
-	--telegram-color: hsl(201 85% 55%);
-	--github-color: hsl(260 56% 52%);
-	--gitlab-color: hsl(20 97% 57%);
-	--yandex-color: hsl(9 97% 55%);
-	--head-hunter-color: hsl(353 99% 44%);
-}
-
-[data-theme='light'] {
-	--background: hsl(241, 10%, 96%);
-	--background--alpha: hsl(241, 44%, 20%, 5%);
-	--field-background: hsl(0, 0%, 100%);
-
-	--overlay: hsl(241, 10%, 10%, 72%);
-
-	--header--alpha: hsl(0, 0%, 100%, 64%);
-
-	--button-secondary: hsl(241, 44%, 20%, 5%);
-	--button-secondary--hover: hsl(241, 44%, 20%, 10%);
-	--button-contrast: hsl(241, 10%, 10%);
-	--button-contrast--hover: hsl(241, 10%, 16%);
-
-	--separator: hsl(241, 10%, 88%);
-	--separator--alpha: hsl(241, 44%, 20%, 15%);
-
-	--text-primary: hsl(241, 10%, 10%);
-	--text-secondary: hsl(241, 10%, 64%);
-	--text-contrast: hsl(0, 0%, 100%);
-	--text-contrast--themed: hsl(0, 0%, 100%);
-}
-
-[data-theme='dark'] {
-	--background: hsl(241, 10%, 10%);
-	--background--alpha: hsl(241, 10%, 1%, 30%);
-	--field-background: hsl(241, 10%, 14%);
-
-	--overlay: hsl(241, 10%, 10%, 72%);
-
-	--header--alpha: hsl(241, 10%, 14%, 64%);
-
-	--button-secondary: hsl(241, 10%, 96%, 10%);
-	--button-secondary--hover: hsl(241, 10%, 96%, 16%);
-	--button-contrast: hsl(241, 10%, 96%);
-	--button-contrast--hover: hsl(241, 10%, 90%);
-
-	--separator: hsl(241, 10%, 28%);
-	--separator--alpha: hsl(241, 80%, 88%, 19%);
-
-	--text-primary: hsl(241, 19%, 94%);
-	--text-secondary: hsl(241, 10%, 64%);
-	--text-contrast: hsl(0, 0%, 100%);
-	--text-contrast--themed: hsl(241, 10%, 10%);
-}
-
-:root {
-	font-family: $ui-font-secondary, -apple-system, BlinkMacSystemFont, 'Segoe UI',
-		Roboto, 'Helvetica Neue', Arial, 'Noto Sans', sans-serif,
-		'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji',
-		Arial, Helvetica, sans-serif;
+	font-family:
+		$ui-font-secondary,
+		BlinkMacSystemFont,
+		Roboto,
+		-apple-system,
+		'Segoe UI',
+		'Helvetica Neue',
+		'Noto Sans',
+		'Apple Color Emoji',
+		'Segoe UI Emoji',
+		'Segoe UI Symbol',
+		'Noto Color Emoji',
+		Arial,
+		Helvetica,
+		sans-serif;
 
 	font-size: clamp(17px, 3.6vmin, 20px);
 	font-weight: normal;
@@ -114,20 +50,10 @@ body {
 	width: 100%;
 	margin: 0;
 	padding: 0;
-
-	// display: flex;
-	// overflow-x: hidden;
-	// overflow-y: auto;
-}
-
-.scrollbar-stable {
-	@media (min-width: $ui-max-w--mobile) {
-		scrollbar-gutter: stable;
-	}
 }
 
 *::selection {
-	background-color: $AccentBlue;
+	background-color: var(--accent-brand-color);
 	color: var(--text-contrast);
 }
 
