--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -62,21 +62,21 @@ body {
 	margin: 0 auto;
 }
 
-body,
-div,
-nav {
-	&::-webkit-scrollbar {
-		width: 4px;
-		height: 4px;
-		background: transparent;
-	}
+// body,
+// div,
+// nav {
+// 	&::-webkit-scrollbar {
+// 		width: 4px;
+// 		height: 4px;
+// 		background: transparent;
+// 	}
 
-	&::-webkit-scrollbar-track {
-		background: transparent;
-	}
+// 	&::-webkit-scrollbar-track {
+// 		background: transparent;
+// 	}
 
-	&::-webkit-scrollbar-thumb {
-		background-color: var(--separator);
-		border-radius: $ui-rounded--xsm;
-	}
-}
+// 	&::-webkit-scrollbar-thumb {
+// 		background-color: var(--separator);
+// 		border-radius: $ui-rounded--xsm;
+// 	}
+// }
