--- a/src/components/ui/navigation/page-navigation/PageNavigationSkeleton.module.scss
+++ b/src/components/ui/navigation/page-navigation/PageNavigationSkeleton.module.scss
@@ -1,4 +1,4 @@
-@import 'assets/styles/Variables';
+@import 'styles/Variables';
 
 .root {
 	@include ui-display-grid($ui-column-width 1fr 1fr $ui-column-width);
